[tool.poetry]
name = "nv-air-sdk"
version = "1.0.0"
description = "Python SDK for creating, running and managing simulations on NVIDIA Air"
authors = ["Air Team <air@nvidia.com>"]
readme = "README.md"
packages = [{ include = "air_sdk", from = "src" }]
license = "MIT"
repository = "https://github.com/NVIDIA/nv-air-sdk"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
include = ["src/air_sdk/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
requests = "^2.32.0"
urllib3 = "^2.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"
pytest = "^8.3.5"
coverage = "^7.6.0"
faker = "^37.1"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
types-python-dateutil = "^2.9.0.20241206"
types-requests = "^2.32.0.20250306"
ipykernel = "^6.29.5"
requests-mock = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
